<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JuguetesActivity">

    <ImageView
        android:id="@+id/ivimagen"
        android:layout_width="132dp"
        android:layout_height="123dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPrecio"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <Button
        android:id="@+id/btnfoto"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:background="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toEndOf="@+id/edtNombre"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="229dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/ingrese_un_juguete"
        android:textColor="#ff33b5e5"
        android:textSize="22sp"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nombre_del_juguete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edtEdad"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edad"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNombre" />

    <EditText
        android:id="@+id/edtDescp"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/descripcion"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEdad" />

    <EditText
        android:id="@+id/edtMaterial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/material_que_esta_hecho"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDescp" />

    <EditText
        android:id="@+id/edtPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Precio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMaterial" />

    <ImageButton
        android:id="@+id/imageDelete"
        android:layout_width="73dp"
        android:layout_height="54dp"
        android:layout_marginEnd="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="48dp"
        android:layout_marginStart="8dp"
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtDescp"
        app:layout_constraintTop_toBottomOf="@+id/imageGrabar"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageGrabar"
        android:layout_width="76dp"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/edtEdad"
        app:layout_constraintTop_toBottomOf="@+id/btnfoto"
        app:srcCompat="@android:drawable/ic_menu_save"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageModif"
        android:layout_width="81dp"
        android:layout_height="61dp"
        android:layout_marginEnd="52dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtMaterial"
        app:layout_constraintTop_toBottomOf="@+id/imageDelete"
        app:srcCompat="@android:drawable/ic_menu_edit"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btmostrar"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Mostrar Juguetes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivimagen"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPrecio"
        app:layout_constraintVertical_bias="0.068"
        tools:ignore="MissingConstraints" />


</android.support.constraint.ConstraintLayout>